// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`perspective renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(0);
  -ms-transform: perspective(0);
  transform: perspective(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(0);
  -ms-transform: perspective(0);
  transform: perspective(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(0);
  -ms-transform: perspective(0);
  transform: perspective(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(0);
  -ms-transform: perspective(0);
  transform: perspective(0);
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(hasnot);
  -ms-transform: perspective(hasnot);
  transform: perspective(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(has);
  -ms-transform: perspective(has);
  transform: perspective(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(hasnot);
  -ms-transform: perspective(hasnot);
  transform: perspective(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(has);
  -ms-transform: perspective(has);
  transform: perspective(has);
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(invalid.path.1);
  -ms-transform: perspective(invalid.path.1);
  transform: perspective(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(invalid.path.1);
  -ms-transform: perspective(invalid.path.1);
  transform: perspective(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(invalid.path.1);
  -ms-transform: perspective(invalid.path.1);
  transform: perspective(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(invalid.path.1);
  -ms-transform: perspective(invalid.path.1);
  transform: perspective(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(-54881);
  -ms-transform: perspective(-54881);
  transform: perspective(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(-54881);
  -ms-transform: perspective(-54881);
  transform: perspective(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(-42365);
  -ms-transform: perspective(-42365);
  transform: perspective(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(-42365);
  -ms-transform: perspective(-42365);
  transform: perspective(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(July);
    -ms-transform: perspective(July);
    transform: perspective(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(August);
    -ms-transform: perspective(August);
    transform: perspective(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(September);
    -ms-transform: perspective(September);
    transform: perspective(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: perspective(November);
    -ms-transform: perspective(November);
    transform: perspective(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(July);
    -ms-transform: perspective(July);
    transform: perspective(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(August);
    -ms-transform: perspective(August);
    transform: perspective(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(September);
    -ms-transform: perspective(September);
    transform: perspective(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: perspective(November);
    -ms-transform: perspective(November);
    transform: perspective(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(May);
    -ms-transform: perspective(May);
    transform: perspective(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(June);
    -ms-transform: perspective(June);
    transform: perspective(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(April);
    -ms-transform: perspective(April);
    transform: perspective(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: perspective(November);
    -ms-transform: perspective(November);
    transform: perspective(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(May);
    -ms-transform: perspective(May);
    transform: perspective(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(June);
    -ms-transform: perspective(June);
    transform: perspective(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: perspective(April);
    -ms-transform: perspective(April);
    transform: perspective(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: perspective(November);
    -ms-transform: perspective(November);
    transform: perspective(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: perspective(July);
    -ms-transform: perspective(July);
    transform: perspective(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(August);
    -ms-transform: perspective(August);
    transform: perspective(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: perspective(September);
    -ms-transform: perspective(September);
    transform: perspective(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(November);
    -ms-transform: perspective(November);
    transform: perspective(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: perspective(August);
    -ms-transform: perspective(August);
    transform: perspective(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: perspective(July);
    -ms-transform: perspective(July);
    transform: perspective(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(August);
    -ms-transform: perspective(August);
    transform: perspective(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: perspective(September);
    -ms-transform: perspective(September);
    transform: perspective(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(November);
    -ms-transform: perspective(November);
    transform: perspective(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: perspective(August);
    -ms-transform: perspective(August);
    transform: perspective(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: perspective(January);
    -ms-transform: perspective(January);
    transform: perspective(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(December);
    -ms-transform: perspective(December);
    transform: perspective(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: perspective(April);
    -ms-transform: perspective(April);
    transform: perspective(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(May);
    -ms-transform: perspective(May);
    transform: perspective(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: perspective(June);
    -ms-transform: perspective(June);
    transform: perspective(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: perspective(January);
    -ms-transform: perspective(January);
    transform: perspective(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(December);
    -ms-transform: perspective(December);
    transform: perspective(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: perspective(April);
    -ms-transform: perspective(April);
    transform: perspective(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: perspective(May);
    -ms-transform: perspective(May);
    transform: perspective(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: perspective(June);
    -ms-transform: perspective(June);
    transform: perspective(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(54881);
  -ms-transform: perspective(54881);
  transform: perspective(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(54881);
  -ms-transform: perspective(54881);
  transform: perspective(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(42365);
  -ms-transform: perspective(42365);
  transform: perspective(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(42365);
  -ms-transform: perspective(42365);
  transform: perspective(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(July);
  -ms-transform: perspective(July);
  transform: perspective(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(July);
  -ms-transform: perspective(July);
  transform: perspective(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(June);
  -ms-transform: perspective(June);
  transform: perspective(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(June);
  -ms-transform: perspective(June);
  transform: perspective(June);
}

<div
    className="c0"
  />,
]
`;

exports[`perspective renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: perspective(DarkSlateBlue);
  -ms-transform: perspective(DarkSlateBlue);
  transform: perspective(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(DarkSlateBlue);
  -ms-transform: perspective(DarkSlateBlue);
  transform: perspective(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(DarkSlateBlue);
  -ms-transform: perspective(DarkSlateBlue);
  transform: perspective(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: perspective(DarkSlateBlue);
  -ms-transform: perspective(DarkSlateBlue);
  transform: perspective(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
